Changed style of sub-detail class in modules.css. Fixed text alignment in index html ordered lists and unordered lists content items.

--- a/MVP/cssHamburger-JS_hideShow/css/modules.css
+++ b/MVP/cssHamburger-JS_hideShow/css/modules.css
@@ -181,7 +181,8 @@ min-height: calc(100% - 300px);
 
 /*ADDED CLASSES to OL AND LI*/
 .sub-detail {
-  padding-left: 6em;
+  padding-left: 3em;
+  padding-top: 1em;
 }
 
 .ac-small li {
